--- a/ecommerce-admin/package.json
+++ b/ecommerce-admin/package.json
@@ -23,6 +23,7 @@
     "cmdk": "^1.0.0",
     "lucide-react": "^0.439.0",
     "next": "14.2.9",
+    "next-cloudinary": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
